--- a/Patient-Hub/src/main/resources/templates/index.html
+++ b/Patient-Hub/src/main/resources/templates/index.html
@@ -80,8 +80,8 @@
     </header>
 
     <nav>
-        <a href="/showPatients">Patients List</a>
-        <a href="/showAllMedicalRec">Medical Records</a>        
+        <a th:href="@{/showPatients}">Patients List</a>
+        <a th:href="@{/showAllMedicalRec}">Medical Records</a>        
         <a th:href="@{/showAddPatient}">Add Patient</a>
     </nav>
     
