--- a/Patient-Hub/src/main/resources/templates/index.html
+++ b/Patient-Hub/src/main/resources/templates/index.html
@@ -83,6 +83,7 @@
         <a th:href="@{/showPatients}">Patients List</a>
         <a th:href="@{/showAllMedicalRec}">Medical Records</a>        
         <a th:href="@{/showAddPatient}">Add Patient</a>
+        <a th:href="@{/logout}">Logout</a>
     </nav>
     
     <section>
