User Registration handling

--- a/Patient-Hub/src/main/resources/templates/login-page.html
+++ b/Patient-Hub/src/main/resources/templates/login-page.html
@@ -88,6 +88,10 @@
 
             <button type="submit">Login</button>                
         </form>
+
+        <div style="margin-top: 20px; text-align: center;">
+            <a th:href="@{/showAddUser}" style="color: #4caf50; text-decoration: none;">Create New User</a>
+        </div>
     </div>
 </body>
 </html>
